fixed history being the wrong color in the tag row

--- a/sites/all/themes/laporteLibrary/assets/less/frontPage.less
+++ b/sites/all/themes/laporteLibrary/assets/less/frontPage.less
@@ -166,9 +166,7 @@
     font-size:1.2em;
     display:table-cell;
     width:auto;
-    &:after{
-      border:none;
-    }
+    &:after{border:none;}
   }
   a[href*="taxonomy/term/52"]{//Adult
     .softColorHover(@colorGreen1);
@@ -179,7 +177,7 @@
   a[href*="taxonomy/term/50"]{//Teens
     .softColorHover(@colorBlue9);
   }
-  a[href*="taxonomy/term/50"]{//Teens
+  a[href*="taxonomy/term/11"]{//History
     .softColorHover(@colorBrown1);
   }
 }
